--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ examples/CTestTestfile.cmake
 examples/Makefile
 examples/cmake_install.cmake
 examples/hdr_decoder
+examples/yb_test
 examples/hiccup
 src/CMakeFiles/
 src/CTestTestfile.cmake
