--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
+project(hdr_histogram)
 if (HDR_LOG_ENABLED)
     add_executable(hdr_decoder
         hdr_decoder.c)
@@ -7,6 +8,17 @@ if (HDR_LOG_ENABLED)
             $<$<NOT:$<BOOL:${WIN32}>>:hdr_histogram>)
     install(
         TARGETS hdr_decoder
+        EXPORT ${PROJECT_NAME}-targets
+        DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+    add_executable(yb_test
+        yb_test.c)
+    target_link_libraries(yb_test
+        PRIVATE
+            $<$<BOOL:${WIN32}>:hdr_histogram_static>
+            $<$<NOT:$<BOOL:${WIN32}>>:hdr_histogram>)
+    install(
+        TARGETS yb_test
         EXPORT ${PROJECT_NAME}-targets
         DESTINATION ${CMAKE_INSTALL_BINDIR})
 
