adjusting gitignore in preparation for PR to 0.11.6-yb

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ src/Makefile
 src/cmake_install.cmake
 src/libhdr_histogram.so
 src/libhdr_histogram.so.*
+src/libhdr_histogram.6.1.2.dylib
+src/libhdr_histogram.6.dylib
+src/libhdr_histogram.dylib
+test/hdr_histogram_perf
 test/CMakeFiles/
 test/CTestTestfile.cmake
 test/Makefile
@@ -54,3 +58,5 @@ test/perftest
 debug
 cmake-build-debug
 /build-afl
+DartConfiguration.tcl
+hdr_histogram.pc
