--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ examples/CTestTestfile.cmake
 examples/Makefile
 examples/cmake_install.cmake
 examples/hdr_decoder
+examples/yb_test
 examples/hiccup
 src/CMakeFiles/
 src/CTestTestfile.cmake
@@ -38,6 +39,8 @@ src/Makefile
 src/cmake_install.cmake
 src/libhdr_histogram.so
 src/libhdr_histogram.so.*
+src/libhdr_histogram.*.dylib
+test/hdr_histogram_perf
 test/CMakeFiles/
 test/CTestTestfile.cmake
 test/Makefile
@@ -53,3 +56,5 @@ test/perftest
 debug
 cmake-build-debug
 /build-afl
+DartConfiguration.tcl
+hdr_histogram.pc
